--- a/package.json
+++ b/package.json
@@ -2,28 +2,36 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
+    "eject": "expo eject",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web",
-    "eject": "expo eject"
+    "test": "jest"
   },
   "dependencies": {
     "axios": "^0.19.1",
     "expo": "~36.0.0",
+    "expo-image-picker": "^8.0.2",
+    "expo-permissions": "^8.0.0",
     "immutable": "^4.0.0-rc.12",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
     "react-native-blur": "^3.2.2",
+    "react-native-datepicker": "^1.6.0",
+    "react-native-document-picker": "^3.2.2",
     "react-native-elements": "^0.19.1",
     "react-native-gesture-handler": "^1.5.3",
+    "react-native-keyboard-aware-scroll-view": "^0.9.1",
+    "react-native-picker-module": "^0.1.2",
     "react-native-responsive-dimensions": "^3.0.0",
+    "react-native-textinput-effects": "^0.4.2",
+    "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7",
+    "react-native-woodpicker": "0.0.16",
     "react-navigation": "^1.6.1",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
-    "redux-saga": "^0.16.0",
-    "expo-blur": "~8.0.0"
+    "redux-saga": "^0.16.0"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0",
