--- a/package.json
+++ b/package.json
@@ -9,18 +9,18 @@
   },
   "dependencies": {
     "axios": "^0.19.1",
-    "expo": "~36.0.0",
-    "expo-image-picker": "^8.0.2",
-    "expo-permissions": "^8.0.0",
+    "expo": "^38.0.0",
+    "expo-image-picker": "~8.3.0",
+    "expo-permissions": "~9.0.1",
     "immutable": "^4.0.0-rc.12",
-    "react": "~16.9.0",
-    "react-dom": "~16.9.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
+    "react": "16.11.0",
+    "react-dom": "16.11.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
     "react-native-blur": "^3.2.2",
     "react-native-datepicker": "^1.6.0",
     "react-native-document-picker": "^3.2.2",
     "react-native-elements": "^0.19.1",
-    "react-native-gesture-handler": "^1.5.3",
+    "react-native-gesture-handler": "~1.6.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
     "react-native-picker-module": "^0.1.2",
     "react-native-responsive-dimensions": "^3.0.0",
@@ -31,10 +31,11 @@
     "react-navigation": "^1.6.1",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
-    "redux-saga": "^0.16.0"
+    "redux-saga": "^0.16.0",
+    "expo-web-browser": "~8.3.1"
   },
   "devDependencies": {
-    "babel-preset-expo": "~8.0.0",
+    "babel-preset-expo": "^8.2.3",
     "@babel/core": "^7.0.0"
   },
   "private": true
